web-app/css/admin/style.css
/*Admin*/
/*Nav tree*/
#furtherCmsNavTree {
    float: left;
    margin-right: 25px;
    width: 20%;
    overflow: scroll;
    padding-bottom: 15px;
}

/*Modules*/
#modules-edit {
    float: left;
    width: 70%;
}

#modules-edit input {
    width: 100%
}

#modules-edit ul {
    margin-left: 0px;
}

#modules-edit ul li {
    list-style: none;
}

.plugin\.furthercms\.category\.urlkey\.label, section#modules-edit div#button-status, section#modules-edit div#last-saved {
    font-size: small;
    color: #a9a9a9;
    font-style: italic;
}

section#modules-edit div#button-status, section#modules-edit div#last-saved {
    float: right;
    clear: right;
    margin-right: 1%;
}

div#reorder-modules-dialog-form ul.sortable {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

div#reorder-modules-dialog-form ul.sortable li {
    margin: 0 3px 3px 3px;
    padding: 0.4em;
    padding-left: 1.5em;
    height: 18px;
}

div#reorder-modules-dialog-form ul.sortable li span {
    position: absolute;
    margin-left: -1.3em;
}

.plugin\.furthercms\.category\.urlkey\.label {
    margin-top: -20px;
    margin-bottom: 10px;
}

div.control-group label.control-label {
    float: left;
    width: 100%;
    text-align: left;
}

form div.control-group div.controls {
    margin-left: 0;
}

section#modules-edit a {
    float: right;
}

section#modules-edit a.save, section#modules-edit a.reorder {
    margin-left: 1%;
}

.highlight {
    background-color: yellow;
}

/*Errors*/
section#modules-edit section.module div.errors {
    clear: right;
}

input.error, select.error, textarea.error {
    background: #fff3f3;
    border-color: #ffaaaa;
}

